<resources>
    <string name="app_name">GitTrends</string>
    <string name="repository_name">Name of Repository</string>
    <string name="description">Description</string>
    <string name="language">Language</string>
    <string name="forks">Forks</string>
    <string name="stars">Stars</string>
    <string name="user_pic">User Portrait</string>
    <string name="repository_ex">anime / Javascript</string>
    <string name="name_ex">juliangarnier (Julian Garnier)</string>
    <string name="note">Notebook</string>
    <string name="filter_description">Filter</string>
    <string name="translation">Translation</string>
    <string name="calendar">Calendar</string>
    <string name="filter">Filter the search</string>
    <string name="language_title">Language:</string>
    <string name="date_title">Created:</string>
    <string name="profile">Profile</string>
    <string name="user_login">user login</string>
    <string name="user_info">user info</string>
</resources>
