<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    card_view:cardCornerRadius="6dp">

    <LinearLayout
        android:id="@+id/linearLayoutRepository"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8">

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:ellipsize="start"
                android:singleLine="true"
                android:text="@string/repository_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/blue"
                android:textColorLink="@color/colorAccent"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/login"
                android:layout_below="@+id/login"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/description"
                android:textColor="@color/blue"
                android:textColorLink="@color/colorAccent"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/description"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/language"
                android:textSize="12sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@drawable/fork"
                android:contentDescription="@string/forks" />

            <TextView
                android:id="@+id/forks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/forks"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@drawable/star"
                android:baselineAlignBottom="false"
                android:contentDescription="@string/stars" />

            <TextView
                android:id="@+id/stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/stars"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>